Fixed meta, decreased monit sensitivity

--- a/templates/php-fpm.conf
+++ b/templates/php-fpm.conf
@@ -13,7 +13,9 @@ set httpd
 check host localhost with address 127.0.0.1
     start program = "/etc/init.d/php5-fpm stop"
     stop  program = "/etc/init.d/php5-fpm start"
-    if failed url {{ monit_php_fpm_url }}
+    if failed
+        url {{ monit_php_fpm_url }}
+        for 5 times within 15 cycles
     then
     restart
     if 2 restarts within 2 cycles then
