--- a/meta/main.yml
+++ b/meta/main.yml
@@ -20,7 +20,7 @@ galaxy_info:
   # the ones that apply to your role. If you don't see your 
   # platform on this list, let us know and we'll get it added!
   #
-  #platforms:
+  platforms:
   #- name: EL
   #  versions:
   #  - all
@@ -79,7 +79,7 @@ galaxy_info:
   #  - 9.1
   #  - 9.2
   - name: Ubuntu
-   versions:
+  versions:
   #  - all
   #  - lucid
   #  - maverick
